--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </body>
     <script type="text/javascript" src="libs/underscore.js"></script>
     <script type="text/javascript" src="libs/backbone.js"></script>
+    <!--
     <script type="text/javascript" src="events/eventOn.js"></script>
     <script type="text/javascript" src="events/eventOff.js"></script>
+    -->
+    <script type="text/javascript" src="model/model.extend.js"></script>
 </html>
