--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
     <script type="text/javascript" src="events/eventOff.js"></script>
     -->
     <script type="text/javascript" src="model/model.extend.js"></script>
+    <script type="text/javascript" src="collection/collection.extend.js"></script>
 </html>
